Fix column misalignment on wide screens with few columns

--- a/src/newtab/components/editable-grid/EditableColumn.scss
+++ b/src/newtab/components/editable-grid/EditableColumn.scss
@@ -5,7 +5,7 @@
 %handle {
   border: 1px solid darken(#fff, 2);
   border-radius: 5px;
-  margin: 10px 10px 0;
+  margin: auto auto 10px auto;
   min-height: 40px;
   position: relative;
   width: $column-width-percentage;
