--- a/src/newtab/components/grid/Column.scss
+++ b/src/newtab/components/grid/Column.scss
@@ -13,7 +13,6 @@ $column-width-percentage: 92%;
   flex-grow: 1;
   margin: auto;
   min-height: 100px;
-  padding: 10px;
   transition: background-color 0.2s ease;
   width: $column-width-percentage;
 }
