--- a/src/newtab/components/grid/Tile.scss
+++ b/src/newtab/components/grid/Tile.scss
@@ -14,10 +14,11 @@ $tile-height: 150px;
   display: flex;
   height: $tile-height;
   justify-content: center;
-  margin-bottom: 10px;
+  margin: 0 0 10px 0;
   position: relative;
   text-align: center;
   width: 100%;
+  box-sizing: border-box;
 }
 
 .tile-overlay,
